openshift/03-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keda-demo
  name: processor
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"processor:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"processor\")].image"}]
spec:
  selector:
    matchLabels:
      app: processor
  replicas: 1
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
      - name: processor
        image: image-registry.openshift-image-registry.svc:5000/keda-demo/processor:latest
