openshift/05-artermis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artemis
  namespace: keda-demo
spec:
  selector:
    app: artemis
  ports:
  - port: 8161
    protocol: TCP
    targetPort: 8161
    name: http
  - port: 61616
    targetPort: 61616
    protocol: TCP
    name: acceptor
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
