openshift/04-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keda-demo
  name: producer
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"producer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"producer\")].image"}]
spec:
  selector:
    matchLabels:
      app: producer
  replicas: 1
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - name: producer
        image: image-registry.openshift-image-registry.svc:5000/keda-demo/producer:latest
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: keda-demo
spec:
  selector:
    app: producer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: producer
  namespace: keda-demo
spec:
  host: ''
  to:
    kind: Service
    name: producer
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
